<resources>
    <!--Strings Activity_main -->
    <string name="app_name">MiAgenda</string>
    <string name="area_nombre">Nombre Completo</string>
    <string name="area_fecha">Fecha de Nacimiento</string>
    <string name="area_telefono">Telefono</string>
    <string name="area_email">Email</string>
    <string name="area_descripcion">Descripción de Contacto</string>
    <string name="btn_siguiente">Siguiente</string>

    <!--Strings activity_confirmar_datos -->
    <string name="titulo_activity2">Confirmar Datos</string>
    <string name="lbl_nombre">Nombre: </string>
    <string name="lbl_fechaNac">Fecha Nacimiento: </string>
    <string name="lbl_telefono">Tel: </string>
    <string name="lbl_email">Email:</string>
    <string name="lbl_descripcion">Descripcion:</string>
    <string name="btn_editarDatos">Editar Datos</string>

    <!--Strings Meses -->
    <string name="enero">ENE</string>
    <string name="febrero">FEB</string>
    <string name="marzo">MAR</string>
    <string name="abril">ABR</string>
    <string name="mayo">MAY</string>
    <string name="junio">JUN</string>
    <string name="julio">JUL</string>
    <string name="agosto">AGO</string>
    <string name="septiembre">SEP</string>
    <string name="octubre">OCT</string>
    <string name="noviembre">NOV</string>
    <string name="diciembre">DIC</string>

    <!--Strings Parametros -->
    <string name="pContacto">contacto</string>

</resources>