<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".ConfirmarDatos">

    <TextView
        android:id="@+id/txtTituloActivity2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_activity2"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textSize="@dimen/titulo_activity">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_nombre"
            android:layout_width="@dimen/dimen_icon"
            android:layout_height="@dimen/dimen_icon"
            android:layout_gravity="center_vertical"
            android:src="@drawable/account_box"
            app:tint="@color/accent"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_nombre"
            android:layout_gravity="center"
            android:textSize="@dimen/texto"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_fecha"
            android:layout_width="@dimen/dimen_icon"
            android:layout_height="@dimen/dimen_icon"
            android:layout_gravity="center_vertical"
            android:src="@drawable/calendar"
            app:tint="@color/accent"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/txtFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_fechaNac"
            android:layout_gravity="center"
            android:textSize="@dimen/texto"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_telefono"
            android:layout_width="@dimen/dimen_icon"
            android:layout_height="@dimen/dimen_icon"
            android:layout_gravity="center_vertical"
            android:src="@drawable/contact_phone"
            app:tint="@color/accent"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/txtTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_telefono"
            android:layout_gravity="center"
            android:textSize="@dimen/texto"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>
    </LinearLayout>


   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <ImageView
           android:id="@+id/img_email"
           android:layout_width="@dimen/dimen_icon"
           android:layout_height="@dimen/dimen_icon"
           android:layout_gravity="center_vertical"
           android:src="@drawable/email"
           app:tint="@color/accent"
           tools:ignore="ContentDescription" />
       <TextView
           android:id="@+id/txtEmail"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/lbl_email"
           android:layout_gravity="center"
           android:textSize="@dimen/texto"
           android:layout_marginLeft="@dimen/marginLeft">
       </TextView>
   </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_descripcion"
            android:layout_width="@dimen/dimen_icon"
            android:layout_height="@dimen/dimen_icon"
            android:layout_gravity="center_vertical"
            android:src="@drawable/description"
            app:tint="@color/accent"
            tools:ignore="ContentDescription" />
        <TextView
            android:id="@+id/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_descripcion"
            android:layout_gravity="center"
            android:textSize="@dimen/texto"
            android:layout_marginLeft="@dimen/marginLeft">
        </TextView>
    </LinearLayout>

    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_editarDatos"
        android:theme="@style/MyButtonRaised">

    </Button>

</LinearLayout>